Wrap .quote strong to fix width overflow on mobile

--- a/portfolios/static/css/grayscale-band.css
+++ b/portfolios/static/css/grayscale-band.css
@@ -468,6 +468,3 @@
   -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
 }
-.quote strong {
-  white-space: nowrap;
-}
